libcm4all-http (1.2.1) unstable; urgency=low

  * status: cast enum to unsigned before arithmetic

 --   

libcm4all-http (1.2) unstable; urgency=low

  * status: implement RFC 2324
  * status: implement RFC 6585 (Additional HTTP Status Codes)
  * status: add WebDAV status codes

 -- Max Kellermann <mk@cm4all.com>  Thu, 09 Aug 2012 10:06:49 -0000

libcm4all-http (1.1) unstable; urgency=low

  * method: add missing HTTP methods OPTIONS, TRACE
  * method: add WebDAV methods

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 Aug 2012 11:33:02 -0000

libcm4all-http (1.0) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 08 Nov 2010 22:14:20 +0100