@@ -7,6 +7,10 @@
 
 #include <stdbool.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 /**
  * Determines if the specified name consists only of valid characters
  * (RFC 822 3.2).
@@ -21,5 +25,9 @@ http_header_name_valid(const char *name);
  */
 bool
 http_header_is_hop_by_hop(const char *name);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif
